# astra

./: .gitignore  README.md  pnpm-lock.yaml  pyproject.toml  render.yaml
apps/agents/: pyproject.toml
apps/agents/astra_agents/: __init__.py  llm.py
apps/agents/astra_agents/crews/: __init__.py  analyst_crew.py  builder_crew.py  judge_crew.py  roadmap_crew.py  scout_crew.py  vault_crew.py
apps/agents/tests/: test_analyst_crew_fallback.py  test_builder_crew_fallback.py  test_judge_crew_fallback.py  test_roadmap_crew_fallback.py  test_scout_crew_fallback.py  test_vault_crew_fallback.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_opportunities.py  0002_users_table.py  0003_registrations_table.py
apps/api/astra_api/: __init__.py  deps.py  email.py  fixtures.py  main.py  settings.py
apps/api/astra_api/db/: __init__.py  models.py  repository.py  session.py  user_repository.py
apps/api/astra_api/routers/: admin.py  auth.py  opportunities.py  users.py
apps/scrapers/: pyproject.toml
apps/scrapers/astra_scrapers/: __init__.py  normalize.py  types.py
apps/scrapers/astra_scrapers/spiders/: __init__.py  devpost.py  devpost_api.py  hack2skill_api.py  hackerearth_api.py  mlh_api.py  unstop_api.py
apps/scrapers/fixtures/: README.md  devpost_api_listing.json  devpost_edge_ai_challenge.html
apps/scrapers/tests/: test_devpost_spider.py
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/opportunity/[id]/: action-buttons.tsx  page.tsx
apps/web/src/app/opportunity/[id]/rehearsal/: page.tsx  rehearsal-form.tsx
apps/web/src/app/profile/[login]/: page.tsx  profile-actions.tsx  skill-heatmap.tsx
apps/web/src/components/: nav-bar.tsx
apps/web/src/lib/: api-client.ts
apps/web/src/types/: opportunity.ts  rehearsal.ts  scaffold.ts  user.ts  vault.ts
docs/: sample_digest.json
infra/: .env.example  docker-compose.yml
scripts/: demo.sh  scrape_all.py
templates/fastapi-react/: README.md
templates/generic-python/: .gitignore  BRIEF.md.template  README.md  pyproject.toml
templates/generic-python/hackathon_starter/: __init__.py  __main__.py
templates/nextjs-fullstack/: README.md  package.json
templates/nextjs-fullstack/src/app/: layout.tsx  page.tsx
templates/python-ml/: README.md
