[project]
name = "astra"
version = "0.1.0"
description = "Astra — multi-agent AI hackathon co-pilot. Opportunity, On-Target."
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/agents",
    "apps/scrapers",
    "packages/schemas",
    "packages/core",
    "packages/vectorstore",
    "packages/github_client",
]

[tool.uv.sources]
astra-schemas = { workspace = true }
astra-core = { workspace = true }
astra-vectorstore = { workspace = true }
astra-github-client = { workspace = true }
astra-agents = { workspace = true }
astra-scrapers = { workspace = true }
astra-api = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages", "apps"]
python_files = ["test_*.py"]
