[project]
name = "astra-agents"
version = "0.1.0"
description = "Astra CrewAI crews — Scout, Analyst, Roadmap, Vault, Builder, Judge."
requires-python = ">=3.11,<3.13"
dependencies = [
    "crewai>=0.70,<0.80",
    "litellm>=1.50",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.5",
    # crewai 0.79.x imports `pkg_resources`. setuptools 81+ removed it, so pin
    # to the last setuptools that still ships pkg_resources.
    "setuptools>=70.0,<81.0",
    "astra-schemas",
    "astra-core",
    "astra-github-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astra_agents"]
