[project]
name = "astra-api"
version = "0.1.0"
description = "Astra FastAPI service — the contract surface for every other component."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "astra-schemas",
    "astra-core",
    "astra-github-client",
    "astra-agents",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astra_api"]
