[project]
name = "astra-scrapers"
version = "0.1.0"
description = "Astra hackathon scrapers — Scrapy + Playwright + spaCy normalization."
requires-python = ">=3.11,<3.13"
dependencies = [
    "scrapy>=2.11",
    "dateparser>=1.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pydantic>=2.7,<3.0",
    "astra-schemas",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astra_scrapers"]
